--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <spark.version>3.4.3</spark.version>
         <scala.version>2.12</scala.version>
         <postgresql.version>42.7.3</postgresql.version>
-        <mariadb.version>3.4.1</mariadb.version>
+        <mysql.version>9.0.0</mysql.version>
         <lombok.version>1.18.34</lombok.version>
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>  
     </properties>
@@ -35,9 +35,9 @@
             <version>${postgresql.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <version>${mariadb.version}</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
