--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>mg.lahatra3</groupId>
     <artifactId>wisedata</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
+    <name>wisedata</name>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -16,7 +17,10 @@
         <postgresql.version>42.7.3</postgresql.version>
         <mysql.version>9.0.0</mysql.version>
         <lombok.version>1.18.34</lombok.version>
-        <appassembler-maven-plugin>2.1.0</appassembler-maven-plugin>
+        <appassembler-maven-plugin.version>2.1.0</appassembler-maven-plugin.version>
+        <main.class>mg.lahatra3.WisedataApplication</main.class>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <dependencies>
         <dependency>
@@ -51,46 +55,52 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
-                <version>${appassembler-maven-plugin}</version>
-                <configuration>
-                    <extraJvmArguments>
-                        -XX:+IgnoreUnrecognizedVMOptions
-                        --add-opens=java.base/java.lang=ALL-UNNAMED
-                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                        --add-opens=java.base/java.io=ALL-UNNAMED
-                        --add-opens=java.base/java.net=ALL-UNNAMED
-                        --add-opens=java.base/java.nio=ALL-UNNAMED
-                        --add-opens=java.base/java.util=ALL-UNNAMED
-                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
-                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
-                        --add-opens=java.base/sun.security.action=ALL-UNNAMED
-                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
-                        --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
-                    </extraJvmArguments>
-                    <platforms>
-                        <platform>windows</platform>
-                        <platform>unix</platform>
-                    </platforms>
-                    <programs>
-                        <program>
-                            <mainClass>mg.lahatra3.Wisedata</mainClass>
-                            <id>wisedata_windows</id>
-                            <platforms>
-                                <platform>windows</platform>
-                            </platforms>
-                        </program>
-                        <program>
-                            <mainClass>mg.lahatra3.Wisedata</mainClass>
-                            <id>wisedata_unix</id>
+                <version>${appassembler-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>assemble-script</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assemble</goal>
+                        </goals>
+                        <configuration>
+                            <extraJvmArguments>
+                                -XX:+IgnoreUnrecognizedVMOptions
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/java.net=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.action=ALL-UNNAMED
+                                --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+                                --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+                            </extraJvmArguments>
+                            <repositoryLayout>flat</repositoryLayout>
+                            <repositoryName>libs</repositoryName>
+                            <binFileExtensions>
+                                <unix>.sh</unix>
+                            </binFileExtensions>
                             <platforms>
                                 <platform>unix</platform>
                             </platforms>
-                        </program>
-                    </programs>
-                </configuration>
+                            <programs>
+                                <program>
+                                    <mainClass>${main.class}</mainClass>
+                                    <id>${project.name}</id>
+                                </program>
+                            </programs>
+                            <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                            <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
+                            <configurationDirectory>resources</configurationDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
