fix(wisedata): fix jvm memory usage ...

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
                         </goals>
                         <configuration>
                             <extraJvmArguments>
+                                -Xms3g
+                                -Xmx3g
+                                -XX:+UseG1GC
                                 -XX:+IgnoreUnrecognizedVMOptions
                                 --add-opens=java.base/java.lang=ALL-UNNAMED
                                 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
